--- a/GuessingGameClient/MainWindow.xaml
+++ b/GuessingGameClient/MainWindow.xaml
@@ -14,7 +14,7 @@
         <Label x:Name="TitleLbl" Content="Linearion" FontSize="70" HorizontalAlignment="Left" Margin="254,20,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
         <TextBox x:Name="UserNameTB" HorizontalAlignment="Left" FontSize="25" Margin="272,0,0,0"  Text="" VerticalAlignment="Center" Width="257" Grid.ColumnSpan="2" RenderTransformOrigin="0.489,1.666"/>
         <Button x:Name="StartBtn" Content="START GAME" FontSize="20" HorizontalAlignment="Left" Margin="341,299,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" RenderTransformOrigin="0.478,3.456" Click="StartBtn_Click"/>
-        <Button x:Name="QuitBtn" Content="QUIT GAME" FontSize="20" HorizontalAlignment="Left" Margin="346,351,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.171,0.704" Grid.ColumnSpan="2"/>
+        <Button x:Name="QuitBtn" Content="QUIT GAME" FontSize="20" HorizontalAlignment="Left" Margin="346,351,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.171,0.704" Grid.ColumnSpan="2" Click="QuitBtn_Click"/>
         <Label x:Name="UserNameLbl" Content="Please enter username:" FontSize="15" HorizontalAlignment="Left" Margin="318,156,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Width="164" RenderTransformOrigin="0.003,0.617"/>
     </Grid>
 </Window>
