--- a/GuessingGameClient/UIGamePage.xaml
+++ b/GuessingGameClient/UIGamePage.xaml
@@ -10,7 +10,7 @@
 
     <Grid RenderTransformOrigin="0.496,0.483">
 
-        <TextBox x:Name="WordCountBox"
+        <TextBox x:Name="WordsToGuessFromTB"
                  HorizontalAlignment="Center"
                  FontSize="30"
                  Margin="0,129,0,0"
@@ -41,7 +41,7 @@
                 VerticalAlignment="Top"
                 Click="SubmitBtn_Click"/>
 
-        <TextBox x:Name="StringDisplayTB"
+        <TextBox x:Name="WordsLeftToGuessTB"
                  HorizontalAlignment="Center"
                  FontSize="25"
                  Margin="0,266,0,0"
